syntax = "proto3";

// هذا التعديل ضروري ليتوافق مع مجلدك الجديد
option go_package = "LM10/DataProcessor/proto"; 

package analytics;

service AnalyticsService {
    rpc ReceivedBatch (DataBatch) returns (BatchResponse);
}

message DataBatch {
    string batch_id = 1;
    string category = 2;
    repeated string entries = 3;
}

message BatchResponse {
    bool success = 1;
    string message = 2;
}